feat(SPV-837): new access-keys API (#635)
